finish site, begin to refactor & add for loop for row colors

--- a/index.html
+++ b/index.html
@@ -9,16 +9,12 @@
     <div class="wrapper">
 
       <div class="primary-container">
-        <div class="primary-color1">
-
-            </div>
+        <div class="primary-color1">            </div>
           <div class="color-info">
             <p><strong>Name:</strong> <span>Mint</span></p>
-            <p><strong>RGB:</strong> <span>0/255/204</span></p>
+            <p><strong>RGB:</strong> <span>217/245/232</span></p>
             <p><strong>HSL:</strong> <span>152deg/58%/91</span></p>
           </div>
-
-
       </div>
 
       <div class="primary-container">
@@ -26,7 +22,7 @@
         </div>
         <div class="color-info">
           <p><strong>Name:</strong> <span>Teal</span></p>
-          <p><strong>RGB:</strong> <span>0/204/204</span></p>
+          <p><strong>RGB:</strong> <span>55/203/194</span></p>
           <p><strong>HSL:</strong> <span>176deg/59%/51%</span></p>
         </div>
       </div>
@@ -36,7 +32,7 @@
         </div>
         <div class="color-info">
           <p><strong>Name:</strong> <span>Gold</span></p>
-          <p><strong>RGB:</strong> <span>255/215/0</span></p>
+          <p><strong>RGB:</strong> <span>255/187/51</span></p>
           <p><strong>HSL:</strong> <span>140deg/100%/60%</span></p>
         </div>
       </div>
@@ -52,18 +48,119 @@
       </div>
 
       <h1>Tints & Tones</h1>
-      <div class="tint-1">
-        <div
+      <div class="tone">
+        <div class="tint mint-1">
+        </div>
+        <div class="tint mint-2">
+        </div>
+        <div class="tint mint-3">
+        </div>
       </div>
 
-      <div class="tint-1">
+      <div class="tone">
+        <div class="tint teal-1">
+        </div>
+        <div class="tint teal-2">
+        </div>
+        <div class="tint teal-3">
+        </div>
       </div>
 
-      <div class="tint-1">
+      <div class="tone">
+        <div class="tint gold-1">
+        </div>
+        <div class="tint gold-2">
+        </div>
+        <div class="tint gold-3">
+        </div>
       </div>
 
-      <div class="tint-1">
+      <div class="tone">
+        <div class="tint tomato-1">
+        </div>
+        <div class="tint tomato-2">
+        </div>
+        <div class="tint tomato-3">
+        </div>
       </div>
+
+
+      <div class="column column1">
+        <h3>Mint</h3>
+        <div class="master-mint">
+        </div>
+        <h5>Mixed with 65% Mint</h5>
+        <div class="mixed-1">
+        </div>
+        <h5>Mixed with 65% Teal</h5>
+        <div class="mixed-2">
+        </div>
+        <h5>Mixed with 65% Gold</h5>
+        <div class="mixed-3">
+        </div>
+        <h5>Mixed with 65% Tomato</h5>
+        <div class="mixed-4">
+        </div>
+      </div>
+
+
+      <div class="column column2">
+        <h3>Teal</h3>
+        <div class="master-teal">
+        </div>
+        <h5>Mixed with 65% Mint</h5>
+        <div class="mixed-1">
+        </div>
+        <h5>Mixed with 65% Teal</h5>
+        <div class="mixed-2">
+        </div>
+        <h5>Mixed with 65% Gold</h5>
+        <div class="mixed-3">
+        </div>
+        <h5>Mixed with 65% Tomato</h5>
+        <div class="mixed-4">
+        </div>
+      </div>
+
+
+      <div class="column column3">
+        <h3>Gold</h3>
+        <div class="master-gold">
+        </div>
+        <h5>Mixed with 65% Mint</h5>
+        <div class="mixed-1">
+        </div>
+        <h5>Mixed with 65% Teal</h5>
+        <div class="mixed-2">
+        </div>
+        <h5>Mixed with 65% Gold</h5>
+        <div class="mixed-3">
+        </div>
+        <h5>Mixed with 65% Tomatoe</h5>
+        <div class="mixed-4">
+
+        </div>
+      </div>
+
+      <div class="column column4">
+        <h3>Tomato</h3>
+        <div class="master-tomato">
+        </div>
+        <h5>Mixed with 65% Mint</h5>
+        <div class="mixed-1">
+        </div>
+        <h5>Mixed with 65% Teal</h5>
+        <div class="mixed-2">
+        </div>
+        <h5>Mixed with 65% Gold</h5>
+        <div class="mixed-3">
+        </div>
+        <h5>Mixed with 65% Tomato</h5>
+        <div class="mixed-4">
+
+        </div>
+      </div>
+
 
 
     </div>
